<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/itemToprate"
        android:icon="@drawable/ic_wb_incandescent_black_24dp"
        android:title="@string/title_toprate" />
    <item
        android:id="@+id/itemNowplay"
        android:icon="@drawable/ic_videocam_black_24dp"
        android:title="@string/title_nowplay" />
    <item
        android:id="@+id/itemUpcomming"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_upcoming" />
    <item
        android:id="@+id/itemMyfavorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_myfavorite" />
</menu>
