<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".ui.detail.Detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineNameMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dp_228" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>

        <ImageView
            android:id="@+id/imagePoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_toolbar"
            android:scaleType="fitCenter"
            android:src="@drawable/background"
            app:layout_constraintBottom_toTopOf="@+id/guidelineVote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:tint="@color/color_pomegranate"
            app:layout_constraintBottom_toBottomOf="@+id/imagePoster"
            app:layout_constraintEnd_toEndOf="@id/imagePoster"
            app:layout_constraintStart_toStartOf="@id/imagePoster"
            app:layout_constraintTop_toTopOf="@id/imagePoster"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textNameMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_movie_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineNameMovie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePoster" />

        <TextView
            android:id="@+id/textReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_date"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNameMovie" />

        <TextView
            android:id="@+id/textVoteAverage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_vote"
            android:gravity="center"
            android:text="@string/title_point"
            android:textColor="@color/color_cape_cod"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textReleaseDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineNameMovie"
            app:layout_constraintTop_toBottomOf="@+id/guidelineVote" />

        <TextView
            android:id="@+id/textVoteCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_vote"
            android:gravity="center"
            android:text="@string/title_vote_count"
            android:textColor="@color/bnv_tab_item_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineNameMovie"
            app:layout_constraintTop_toBottomOf="@id/textVoteAverage" />

<!--        <TextView-->
<!--            android:id="@+id/textGenresSecond"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/bg_item_genres"-->
<!--            android:backgroundTint="@color/bnv_tab_item_foreground"-->
<!--            android:gravity="center"-->
<!--            android:padding="@dimen/dp_10"-->
<!--            android:text="@string/title_action"-->
<!--            android:textColor="@color/color_pomegranate"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textReleaseDate" />-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textReleaseDate"  />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/title_overview"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerGenres" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/btnShowOverview"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/textOverviewContent"
            app:layout_constraintStart_toEndOf="@+id/textOverview"
            app:layout_constraintTop_toTopOf="@+id/textOverview"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textOverviewContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="@dimen/dp_5"
            android:text="@string/email"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sp_16"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textOverview" />

        <TextView
            android:id="@+id/textCastAndCrew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/title_cast_and_crew"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textOverviewContent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCastAndCrew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textRecommendation"
            app:layout_constraintTop_toBottomOf="@+id/textCastAndCrew" />

        <TextView
            android:id="@+id/textRecommendation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/title_recommendation"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerCastAndCrew" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleMovieRecommendations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRecommendation"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
